k8s/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-wsp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zk-wsp-server
  template:
    metadata:
      labels:
        app: zk-wsp-server
    spec:
      containers:
        - name: zk-wsp-server
          image: wsp-server:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: server-config
              mountPath: /opt
          ports:
            - containerPort: 8989
      volumes:
        - name: server-config
          configMap:
            name: zk-wsp-server-configmap
