k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-wsp-server-service
  namespace: zkcloud
spec:
  type: NodePort
  selector:
    app: zk-wsp-server
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 32080
