k8s/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location /w/register {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
       }
spec:
  ingressClassName: nginx
  rules:
    - host: api.loadcloud01.getanton.com
      http:
        paths:
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: zk-wsp-server
                port:
                  number: 8989
